# ur_onrobot

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: onrobot_2fg14.srdf
launch/: display_gripper.launch.py  ur_onrobot.launch.py
resource/: ur_onrobot
rviz/: gripper.rviz
srdf/: ur_with_onrobot.srdf.xacro  ur_with_onrobot_generic.srdf.xacro
ur_onrobot/: Onrobot_UR_ROS2_driver.py  UR_onrobot.py  gripper_joint_state_publisher.py  gripper_simulator.py
urdf/: onrobot_2fg14.xacro  onrobot_2fg14_standalone.xacro  ur_with_onrobot.xacro  ur_with_onrobot_generic.xacro
