<?xml version="1.0"?>
<package format="3">
  <name>ur_onrobot</name>
  <version>0.1.0</version>
  <description>OnRobot URCap XML-RPC helper + ROS 2 driver for Universal Robots</description>
  <maintainer email="dominykas.strazdas@ovgu.de">Dominykas Strazdas</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>python3-pycurl</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
